{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 87,
  "lineage": "6d766e11-4813-a4e3-8bae-6575dd4da0f3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "vpc_default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:security-group/sg-056f83868a78f5eab",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-056f83868a78f5eab",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-061df2b9d11301cad"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:vpc-endpoint/vpce-03aece4d9e7b1bc5c",
            "cidr_blocks": [
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19"
            ],
            "dns_entry": [
              {
                "dns_name": "*.vpce-03aece4d9e7b1bc5c-zowqmucw.s3.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "*.vpce-03aece4d9e7b1bc5c-zowqmucw-us-east-1c.s3.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "*.vpce-03aece4d9e7b1bc5c-zowqmucw-us-east-1a.s3.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "*.vpce-03aece4d9e7b1bc5c-zowqmucw-us-east-1b.s3.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              }
            ],
            "id": "vpce-03aece4d9e7b1bc5c",
            "network_interface_ids": [
              "eni-019c5bf019ac0a7ce",
              "eni-029f9a6dee75b68c6",
              "eni-04b6d44680c6fd080"
            ],
            "owner_id": "904546716712",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-056f83868a78f5eab"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "subnet_ids": [
              "subnet-0148157a62e51fd09",
              "subnet-01b942cc65a068b44",
              "subnet-02a25a162cc65c1a0"
            ],
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "s3-vpc-endpoint",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "s3-vpc-endpoint",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-061df2b9d11301cad"
          },
          "dependencies": [
            "data.aws_security_group.vpc_default_sg",
            "data.aws_subnet_ids.private",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "sns",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:vpc-endpoint/vpce-041037833638e2623",
            "dns_entry": [
              {
                "dns_name": "vpce-041037833638e2623-9kow300f.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-041037833638e2623-9kow300f-us-east-1c.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-041037833638e2623-9kow300f-us-east-1a.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-041037833638e2623-9kow300f-us-east-1b.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              }
            ],
            "id": "vpce-041037833638e2623",
            "network_interface_ids": [
              "eni-057fcfa138b94ffe5",
              "eni-06e374bd1eb334695",
              "eni-0ad260212f38348c8"
            ],
            "owner_id": "904546716712",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-056f83868a78f5eab"
            ],
            "service_name": "com.amazonaws.us-east-1.sns",
            "state": "available",
            "subnet_ids": [
              "subnet-0148157a62e51fd09",
              "subnet-01b942cc65a068b44",
              "subnet-02a25a162cc65c1a0"
            ],
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "sns-vpc-endpoint",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "sns-vpc-endpoint",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-061df2b9d11301cad"
          },
          "dependencies": [
            "data.aws_security_group.vpc_default_sg",
            "data.aws_subnet_ids.private",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "sqs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:vpc-endpoint/vpce-06a84c61120dcad97",
            "dns_entry": [
              {
                "dns_name": "vpce-06a84c61120dcad97-eg77up3k.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06a84c61120dcad97-eg77up3k-us-east-1c.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06a84c61120dcad97-eg77up3k-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06a84c61120dcad97-eg77up3k-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              }
            ],
            "id": "vpce-06a84c61120dcad97",
            "network_interface_ids": [
              "eni-011e3c31bc3fdd2b4",
              "eni-02f33c476b668b234",
              "eni-07ac58b90738d42aa"
            ],
            "owner_id": "904546716712",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-056f83868a78f5eab"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "state": "available",
            "subnet_ids": [
              "subnet-0148157a62e51fd09",
              "subnet-01b942cc65a068b44",
              "subnet-02a25a162cc65c1a0"
            ],
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "sqs-vpc-endpoint",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "sqs-vpc-endpoint",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-061df2b9d11301cad"
          },
          "dependencies": [
            "data.aws_security_group.vpc_default_sg",
            "data.aws_subnet_ids.private",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64532,
            "arn": "arn:aws:ec2:us-east-1:904546716712:transit-gateway/tgw-0e33cac367f918c3d",
            "association_default_route_table_id": "tgw-rtb-01deee2127354a9cd",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "My TGW shared with several other AWS accounts",
            "dns_support": "enable",
            "id": "tgw-0e33cac367f918c3d",
            "owner_id": "904546716712",
            "propagation_default_route_table_id": "tgw-rtb-01deee2127354a9cd",
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "my-tgw",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "my-tgw",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "blackhole": true,
            "destination_cidr_block": "10.0.0.0/16",
            "id": "tgw-rtb-04175376a8d0d376f_10.0.0.0/16",
            "transit_gateway_route_table_id": "tgw-rtb-04175376a8d0d376f"
          },
          "dependencies": [
            "data.aws_subnet_ids.private",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_route_table.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:transit-gateway-route-table/tgw-rtb-04175376a8d0d376f",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-04175376a8d0d376f",
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "my-tgw",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "my-tgw",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "transit_gateway_id": "tgw-0e33cac367f918c3d"
          },
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-04af300726447f8a5",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0148157a62e51fd09",
              "subnet-01b942cc65a068b44",
              "subnet-02a25a162cc65c1a0"
            ],
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "my-tgw-vpc1",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "my-tgw-vpc1",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0e33cac367f918c3d",
            "vpc_id": "vpc-061df2b9d11301cad",
            "vpc_owner_id": "904546716712"
          },
          "dependencies": [
            "data.aws_subnet_ids.private",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:route-table/rtb-00e90b83da48910a9",
            "default_route_table_id": "rtb-00e90b83da48910a9",
            "id": "rtb-00e90b83da48910a9",
            "owner_id": "904546716712",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "DefaultRouteTable": "true",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "DefaultRouteTable": "true",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-061df2b9d11301cad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:security-group/sg-056f83868a78f5eab",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-056f83868a78f5eab",
            "ingress": [],
            "name": "default",
            "owner_id": "904546716712",
            "revoke_rules_on_delete": false,
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "default",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "default",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "vpc_id": "vpc-061df2b9d11301cad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:route-table/rtb-02e2d5b17cfd4ef03",
            "id": "rtb-02e2d5b17cfd4ef03",
            "owner_id": "904546716712",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private-private-us-east-1a",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private-private-us-east-1a",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "timeouts": null,
            "vpc_id": "vpc-061df2b9d11301cad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:route-table/rtb-0f7f61f39a43fd563",
            "id": "rtb-0f7f61f39a43fd563",
            "owner_id": "904546716712",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private-private-us-east-1b",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private-private-us-east-1b",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "timeouts": null,
            "vpc_id": "vpc-061df2b9d11301cad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:route-table/rtb-07b91defdf8dbf957",
            "id": "rtb-07b91defdf8dbf957",
            "owner_id": "904546716712",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private-private-us-east-1c",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private-private-us-east-1c",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "timeouts": null,
            "vpc_id": "vpc-061df2b9d11301cad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed7fc7552bf2d9b8",
            "route_table_id": "rtb-02e2d5b17cfd4ef03",
            "subnet_id": "subnet-01b942cc65a068b44"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009ebd925959d1bdc",
            "route_table_id": "rtb-0f7f61f39a43fd563",
            "subnet_id": "subnet-02a25a162cc65c1a0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0137e1bb004268437",
            "route_table_id": "rtb-07b91defdf8dbf957",
            "subnet_id": "subnet-0148157a62e51fd09"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:subnet/subnet-01b942cc65a068b44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01b942cc65a068b44",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904546716712",
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private-private-us-east-1a",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private-private-us-east-1a",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "vpc_id": "vpc-061df2b9d11301cad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:subnet/subnet-02a25a162cc65c1a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02a25a162cc65c1a0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904546716712",
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private-private-us-east-1b",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private-private-us-east-1b",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "vpc_id": "vpc-061df2b9d11301cad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:subnet/subnet-0148157a62e51fd09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0148157a62e51fd09",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904546716712",
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private-private-us-east-1c",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private-private-us-east-1c",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "vpc_id": "vpc-061df2b9d11301cad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904546716712:vpc/vpc-061df2b9d11301cad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6a3c69650492d07",
            "default_route_table_id": "rtb-00e90b83da48910a9",
            "default_security_group_id": "sg-056f83868a78f5eab",
            "dhcp_options_id": "dopt-0bdd38dea874a69a6",
            "enable_classiclink": true,
            "enable_classiclink_dns_support": true,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-061df2b9d11301cad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00e90b83da48910a9",
            "owner_id": "904546716712",
            "tags": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            },
            "tags_all": {
              "ApplicationID": "APID001",
              "ApplicationName": "abc",
              "CostCentre": "CC001",
              "Environment": "DEVELOPMENT",
              "EnvironmentName": "dev",
              "Name": "private",
              "ServiceNAme": "xyz",
              "SupportGroup": "krd"
            }
          }
        }
      ]
    }
  ]
}